--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 
-    <title>Cara</title>
+    <title>Cara - Contact Us</title>
 </head>
 
 <body>
@@ -24,10 +24,10 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a id href="cart.html"><i class="bi bi-cart"></i></a></li>
                 <a href="#" id="close"><i class="bi bi-x"></i></a>
             </ul>
@@ -37,18 +37,69 @@
             <i id="bar" class="bi bi-list"></i>
         </div>
     </section>
-    <section id="page-header" class="blog-header">
-
-        <h2>#stayhome</h2>
-
-        <p>Save more with coupons upto 70% off!</p>
-
+    <section id="page-header" class="about-header">
+        <h2>#let's_talk</h2>
+        <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="bi bi-arrow-right"></i></a>
+
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit One of Our Agency Locations or Contact Us Today</h2>
+            <h3>Head Office</h3>
+            <div>
+                <li>
+                    <i class="bi bi-geo-alt-fill"></i>
+                    <p>281, Shyam Nagar, Indore, Madhya Pradesh, India</p>
+                </li>
+                <li>
+                    <i class="bi bi-envelope-fill"></i>
+                    <p>contact@cara.com</p>
+                </li>
+                <li>
+                    <i class="bi bi-telephone-fill"></i>
+                    <p>+91 920147978 / +91 9826593932</p>
+                </li>
+                <li>
+                    <i class="bi bi-clock-fill"></i>
+                    <p>Monday to Saturday: 9:00am to 10:00pm</p>
+                </li>
+            </div>
+        </div>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3680.1974816878695!2d75.85707067507508!3d22.719568979386845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fd91e9b0f0fb%3A0x1a2e1b846f6f9cf8!2sShyam%20Nagar%2C%20Indore%2C%20Madhya%20Pradesh!5e0!3m2!1sen!2sin!4v1682159840506!5m2!1sen!2sin"
+                width="600" height="450" style="border:0; border-radius:20px;" allowfullscreen=""
+                loading="lazy"></iframe>
+        </div>
     </section>
+
+    <section id="form-details" class="section-p1">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="E-mail">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+        <div class="people">
+            <div>
+                <img src="img/banner/b20.jpg" alt="" style="width:100%; border-radius:20px;">
+                <p><span>Customer Support</span> Available 24/7 to assist you with any questions or concerns.</p>
+            </div>
+            <div>
+                <img src="img/banner/b19.jpg" alt="" style="width:100%; border-radius:20px;">
+                <p><span>Fashion Experts</span> Our team of stylists can help you find the perfect look.</p>
+            </div>
+            <div>
+                <img src="img/banner/b18.jpg" alt="" style="width:100%; border-radius:20px;">
+                <p><span>Quality Assurance</span> Every item is inspected before shipping to ensure quality.</p>
+            </div>
+        </div>
+    </section>
+
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletters</h4>
@@ -94,7 +145,7 @@
 
         </div>
         <div class="col install">
-            <h4>Intsall App</h4>
+            <h4>Install App</h4>
             <p>From App Store or Google Play</p>
             <div class="row">
                 <img src="img/pay/play.jpg" alt="">
