--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 
-    <title>Cara</title>
+    <title>Cara - About Us</title>
 </head>
 
 <body>
@@ -24,9 +24,9 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a id href="cart.html"><i class="bi bi-cart"></i></a></li>
                 <a href="#" id="close"><i class="bi bi-x"></i></a>
@@ -37,18 +37,72 @@
             <i id="bar" class="bi bi-list"></i>
         </div>
     </section>
-    <section id="page-header" class="blog-header">
-
-        <h2>#stayhome</h2>
-
-        <p>Save more with coupons upto 70% off!</p>
-
+    <section id="page-header" class="about-header">
+        <h2>#KnowUs</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
     </section>
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="bi bi-arrow-right"></i></a>
+
+    <section id="about-head" class="section-p1">
+        <img src="img/banner/b2.jpg" alt="" style="width:40%; height:auto; border-radius:20px;">
+        <div>
+            <h2>Who We Are?</h2>
+            <p>
+                CARA is a premier fashion destination that curates the finest clothing collections from around the
+                world.
+                We believe that fashion is more than just clothing — it's a form of self-expression.
+                Our mission is to make quality fashion accessible to everyone, providing an exceptional shopping
+                experience
+                with carefully selected pieces that blend timeless elegance with modern trends.
+            </p>
+            <br>
+            <p>
+                Founded in 2024, we've quickly grown to become one of the most trusted online fashion retailers.
+                Our team of fashion experts hand-pick every item in our collection to ensure it meets our high standards
+                of quality, style, and sustainability.
+            </p>
+
+            <marquee bgcolor="#d1ffe4" loop="-1" scrollamount="5" width="100%"
+                style="margin-top:20px; border-radius:5px; padding:10px;">
+                <span style="color:#088178; font-weight:600;">🌿 We are committed to sustainability — 100% eco-friendly
+                    packaging on all orders!</span>
+            </marquee>
+        </div>
     </section>
+
+    <section id="about-app" class="section-p1">
+        <h1>Download Our <a href="#">App</a></h1>
+        <div class="video">
+            <video autoplay muted loop src="img/banner/b2.jpg" style="width:100%; border-radius:20px;"></video>
+        </div>
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" alt="">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" alt="">
+            <h6>F24/7 Support</h6>
+        </div>
+    </section>
+
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletters</h4>
@@ -94,7 +148,7 @@
 
         </div>
         <div class="col install">
-            <h4>Intsall App</h4>
+            <h4>Install App</h4>
             <p>From App Store or Google Play</p>
             <div class="row">
                 <img src="img/pay/play.jpg" alt="">
