--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 
-    <title>Cara</title>
+    <title>Cara - Cart</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -37,18 +37,84 @@
             <i id="bar" class="bi bi-list"></i>
         </div>
     </section>
-    <section id="page-header" class="blog-header">
-
-        <h2>#stayhome</h2>
-
-        <p>Save more with coupons upto 70% off!</p>
-
+    <section id="page-header" class="about-header">
+        <h2>#cart</h2>
+        <p>Add your coupon code & SAVE upto 70%!</p>
     </section>
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="bi bi-arrow-right"></i></a>
+
+    <section id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="#"><i class="bi bi-x-lg"></i></a></td>
+                    <td><img src="img/products/f1.jpg" alt="" style="width:70px; border-radius:10px;"></td>
+                    <td>Cartoon Astronaut T-Shirts</td>
+                    <td>$78</td>
+                    <td><input type="number" value="1" min="1"
+                            style="width:50px; padding:5px; border:1px solid #ccc; border-radius:5px;"></td>
+                    <td>$78</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="bi bi-x-lg"></i></a></td>
+                    <td><img src="img/products/f2.jpg" alt="" style="width:70px; border-radius:10px;"></td>
+                    <td>Cartoon Astronaut T-Shirts</td>
+                    <td>$78</td>
+                    <td><input type="number" value="1" min="1"
+                            style="width:50px; padding:5px; border:1px solid #ccc; border-radius:5px;"></td>
+                    <td>$78</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="bi bi-x-lg"></i></a></td>
+                    <td><img src="img/products/f3.jpg" alt="" style="width:70px; border-radius:10px;"></td>
+                    <td>Cartoon Astronaut T-Shirts</td>
+                    <td>$78</td>
+                    <td><input type="number" value="1" min="1"
+                            style="width:50px; padding:5px; border:1px solid #ccc; border-radius:5px;"></td>
+                    <td>$78</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
+
+    <section id="cart-add" class="section-p1">
+        <div id="coupon">
+            <h3>Apply Coupon</h3>
+            <div>
+                <input type="text" placeholder="Enter Your Coupon"
+                    style="padding:10px 15px; border:1px solid #e0e0e0; border-radius:8px; width:250px;">
+                <button class="normal">Apply</button>
+            </div>
+        </div>
+        <div id="subtotal">
+            <h3>Cart Totals</h3>
+            <table>
+                <tr>
+                    <td>Cart Subtotal</td>
+                    <td>$ 234</td>
+                </tr>
+                <tr>
+                    <td>Shipping</td>
+                    <td>Free</td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td><strong>$ 234</strong></td>
+                </tr>
+            </table>
+            <button class="normal">Proceed to Checkout</button>
+        </div>
+    </section>
+
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletters</h4>
@@ -94,7 +160,7 @@
 
         </div>
         <div class="col install">
-            <h4>Intsall App</h4>
+            <h4>Install App</h4>
             <p>From App Store or Google Play</p>
             <div class="row">
                 <img src="img/pay/play.jpg" alt="">
